--- a/omok2/game.css
+++ b/omok2/game.css
@@ -111,3 +111,65 @@
   font-size: 15px;
   border-radius: 7px;
 }
+
+/* 승리 모달 */
+
+/* .modal {
+  display: none;
+  position: fixed;
+  border: 1px solid;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+
+  background-color: rgba(0, 0, 0, 0.5);
+} */
+
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1000;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+.modal-content {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background: white;
+  padding: 20px;
+  border-radius: 10px;
+  text-align: center;
+}
+
+.winnertBox {
+  font-size: 50px;
+  background-color: white;
+  border: 1px solid;
+}
+
+img {
+  width: 300px;
+  height: 300px;
+}
+
+#closeModal {
+  background: #ffcc00;
+  border: none;
+  padding: 10px 20px;
+  font-size: 18px;
+  color: black;
+  cursor: pointer;
+  border-radius: 5px;
+  margin-top: 10px;
+}
+
+#closeModal:hover {
+  background: #ffaa00;
+}
