--- a/omokteam/style.css
+++ b/omokteam/style.css
@@ -18,7 +18,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  border: 1px solid;
+  /* border: 1px solid; */
 }
 
 .title {
